--- a/.github/workflows/loci-analysis.yml
+++ b/.github/workflows/loci-analysis.yml
@@ -9,11 +9,15 @@ on:
 
 env:
   LOCI_PROJECT: Llama CPP
+  LOCI_API_KEY: '${{ secrets.LOCI_API_KEY }}'
+  LOCI_BACKEND_URL: '${{ vars.LOCI_BACKEND_URL }}'
 
 jobs:
   build-and-upload:
     name: Build and Upload Artifacts
     runs-on: ubuntu-latest
+    environment: ${{ vars.LOCI_ENV || 'PROD__AL_DEMO' }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -61,9 +65,6 @@ jobs:
 
       - name: Upload build artifacts
         uses: auroralabs-loci/loci-action@v1.0.1
-        env:
-          LOCI_BACKEND_URL: '${{ vars.LOCI_DEV_BACKEND_URL }}'
-          LOCI_API_KEY: '${{ secrets.LOCI_DEV_AGENTIC_API_KEY }}'
         with:
           mode: upload
           binaries: |
