--- a/.github/workflows/loci-analysis.yml
+++ b/.github/workflows/loci-analysis.yml
@@ -1,9 +1,8 @@
 name: LOCI Analysis
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened]
-    branches: [ main ]
   push:
     branches: [ main ]
 
