--- a/.github/workflows/sync-upstream-prs.yml
+++ b/.github/workflows/sync-upstream-prs.yml
@@ -1,7 +1,7 @@
 name: Mirror Upstream PRs
 on:
   schedule:
-  - cron: '0 1-3,5-7,9-11,13-15,17-19,21-23 * * *'   # every hour, but skipping main hours → runs at +1h, +2h, +3h after each main
+    - cron: '30 * * * *'    # every hour at :30 (UTC) → ~30 mins after sync
   workflow_dispatch: {}
 
 permissions:
