--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -1,7 +1,7 @@
 name: Sync Upstream
 on:
   schedule:
-    - cron: '0 */4 * * *'   # 00:00, 04:00, 08:00, 12:00, 16:00, 20:00 UTC
+    - cron: '0 * * * *'     # every hour at :00 (UTC)
   workflow_dispatch: {}
 
 permissions:
